--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             font-size: 0.9rem;
             color: var(--text-muted);
             font-style: italic;
-            margin-top: auto;
+           
         }
 
         .calculations-section {
@@ -388,21 +388,22 @@
                 <div class="stat-card">
                     <div class="stat-icon">⚡</div>
                     <h3 class="stat-title">Вероятность удара молнией</h3>
-                    <div class="stat-value">0,0001%</div>
+                    <br>
+                    <div class="stat-value">1 : 1 000 000</div>
                     <p class="stat-source">Данные МЧС РБ, аналогичные общемировой статистике</p>
                 </div>
 
                 <div class="stat-card">
                     <div class="stat-icon">🚗</div>
                     <h3 class="stat-title">Вероятность погибнуть в ДТП</h3>
-                    <div class="stat-value">0,009%</div>
+                    <div class="stat-value">1 : 10 000</div>
                     <p class="stat-source">По данным ГАИ Беларуси</p>
                 </div>
 
                 <div class="stat-card">
                     <div class="stat-icon">🎱</div>
                     <h3 class="stat-title">Вероятность выиграть в лотерею</h3>
-                    <div class="stat-value">0,000265%</div>
+                    <div class="stat-value">1 : 375 000</div>
                     <p class="stat-source">"Спортлото 5 из 36", рассчитано по комбинаторике</p>
                 </div>
             </div>
